# strava_dashboard

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue-teample.md  issue-template.md
.github/workflows/: lint.yml  python-app.yml
src/strava/: app.py  data.py
src/strava/db/: __init__.py  db_manager.py  import_activities.py  import_all.py  import_streams.py
src/strava/db/queries/: create_schema.sql  get_activities_with_streams.sql  get_activity_stream.sql  get_all_activities.sql
src/strava/utils/: activity_processing.py  file_parsing.py
src/strava/views/: activities.py  deep_dive.py  general.py  races.py
tests/: test_data.py  test_database.py  test_deep_dive.py  verify_deep_dive.py
