[project]
name = "strava"
version = "0.1.0"
description = ""
authors = [
    {name = "demirbilek95",email = "dogancandemirbilek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython (>=9.6.0,<10.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "python-tcxparser (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "fitparse (>=1.2.0,<2.0.0)",
    "garmin-fit-sdk (>=21.178.0,<22.0.0)"
]

[dependency-groups]
dev = [
    "numpy (>=2.3.4,<3.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | data
  | notebooks
)/
'''

[tool.pytest.ini_options]
pythonpath = ["src", "src/strava"]
testpaths = ["tests"]

